fix: after bar title cardprojects

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,7 +2,15 @@
     padding: 32px;
     width: 100%;
     max-width: 1200px
+
 }
+@media (max-width: 1200px) {
+    .swiper {
+        max-width: 860px
+    
+    }    
+}
+
   
 .swiper-slide {
     display: flex;
